# data-stack

./: .pre-commit-config.yaml  LICENSE  README.md  glossary.md  pyproject.toml
adapters/data-file-repository-pg/: pyproject.toml
adapters/data-file-repository-pg/src/data_file_repository_pg/: data_file_model.py  pg_data_file_repository.py
adapters/data-file-repository-pg/tests/: test_pg_datafile_repository.py
adapters/location-api-geopy/: pyproject.toml
adapters/location-api-geopy/src/location_api_geopy/: location_api_geopy.py
adapters/measure-repository-openmeteo/: pyproject.toml
adapters/measure-repository-openmeteo/src/measure_repository_openmeteo/: config.py  open_meteo_measure_reader.py  open_meteo_measure_repository.py
adapters/measure-repository-openmeteo/tests/: open_meteo_connection_test.py  test_measure_io_open_meteo.py  test_open_meteo_measure_repository.py
adapters/message-queue-kafka/: pyproject.toml
adapters/message-queue-kafka/src/message_queue_kafka/: kafka_consumer.py  kafka_factory.py  kafka_producer.py
adapters/message-queue-kafka/tests/: test_kafka_mq.py
adapters/message-queue-redis/: pyproject.toml
adapters/message-queue-redis/src/message_queue_redis/: redis_config.py  redis_connection.py  redis_consumer.py  redis_factory.py  redis_producer.py
adapters/message-queue-redis/tests/: test_redis_mq.py
adapters/openmeteo-measure-repository/: pyproject.toml
adapters/openmeteo-measure-repository/src/openmeteo_measure_repository/: config.py  open_meteo_measure_repository.py
adapters/openmeteo-measure-repository/tests/: test_open_meteo_measure_repository.py
adapters/posix-file-repository/: pyproject.toml
adapters/posix-file-repository/src/posix_file_repository/: posix_file_repository.py
adapters/posix-file-repository/tests/: test_posix_file_repository.py
adapters/posix-measure-repository/: pyproject.toml
adapters/posix-measure-repository/src/posix_measure_repository/: data_file_measure_repository.py
adapters/posix-measure-repository/tests/: test_measure_io.py
adapters/s3-file-repository/: pyproject.toml
adapters/s3-file-repository/src/s3_file_repository/: s3_file_repository.py
adapters/s3-file-repository/tests/: test_s3_file_repository.py
adapters/sql-meteo-adapters/: pyproject.toml
adapters/sql-meteo-adapters/src/sql_meteo_adapters/: data_file.py  data_file_model.py  data_file_repository.py  models.py  repositories.py  sensor.py  sensor_mapper.py  sensor_model.py  sensor_repository.py  workspace.py  workspace_model.py  workspace_repository.py
adapters/sql-meteo-adapters/tests/: test_repositories.py
adapters/unit-of-work-sql/: pyproject.toml
adapters/unit-of-work-sql/src/unit_of_work_sql/: sql_unit_of_work.py
adapters/unit-of-work-sql/src/unit_of_work_sql/patches/: location_patch.py
adapters/unit-of-work-sql/src/unit_of_work_sql/repositories/: data_file.py  sensor.py  workspace.py
adapters/unit-of-work-sql/tests/: test_repositories.py
adapters/xarray-datafile-api/: pyproject.toml
adapters/xarray-datafile-api/src/xarray_datafile_api/: xarray_datafile_api.py
adapters/xarray-datafile-api/tests/: test_datafile_api.py
connectors/celery-connector/: pyproject.toml
connectors/celery-connector/tests/: demo_celery.py  demo_celery_standalone.py  start.Sh
connectors/influxdb-connector/: pyproject.toml
connectors/influxdb-connector/src/influxdb_connector/: influx_db_connection.py
connectors/kafka-connector/: pyproject.toml
connectors/kafka-connector/src/kafka_connector/: kafka_config.py  kafka_connection.py
connectors/pg-connector/: pyproject.toml
connectors/pg-connector/src/pg_connector/: model_mapping.py  pg_connection.py  pg_repository.py
connectors/pg-connector/tests/: test_transaction.py
connectors/sql-connector/: pyproject.toml
connectors/sql-connector/src/sql_connector/: model_mapper.py  model_mapping.py  patch.py  sql_connection.py  sql_repository.py  sql_unit_of_work.py
connectors/sql-connector/src/sql_connector/patches/: location_patch.py  patch.py
connectors/sql-connector/tests/: test_sql_unit_of_work.py  test_transaction.py
docs/: features.md  glossary.md  (+1 more)
projects/meteo-app/: pyproject.toml
projects/meteo-app/src/meteo_app/: config.py  datafile_ingestion_listener.py  datafile_uploader.py  measure_ingestion_listener.py  open_meteo_producer_app.py  server_app.py  test_postgis_influxdb.py
projects/meteo-app/src/meteo_app/wires/: config.ini  config.py  repositories.py  services.py
projects/meteo-app/src/meteo_app/workers/: data_file_ingestion_listener.py  data_file_upload_worker.py  measure_ingestion_listener.py
projects/meteo-app/tests/: test_postgis_influxdb.py
projects/meteo-backend/: pyproject.toml
projects/meteo-backend/src/meteo_backend/: app_factory.py  app_main.py  main.py
projects/meteo-backend/src/meteo_backend/core/: app_factory.py  application_context.py  dependencies.py
projects/meteo-backend/tests/: gif_creator.py  mocked_container.py  test_config.py  test_files.py  test_health.py  test_postgis_influxdb.py
projects/meteo-domain/: README.md  pyproject.toml
projects/meteo-domain/src/meteo_domain/: config.py  utils.py
projects/meteo-domain/src/meteo_domain/core/: dates.py  geo_repository.py  logger.py  repository.py  time_repository.py  unit_of_work.py
projects/meteo-domain/src/meteo_domain/data_file/: datafile_serializer.py  datafile_service.py
projects/meteo-domain/src/meteo_domain/datafile_ingestion/: datafile_service.py  location_service.py  workspace_service.py
projects/meteo-domain/src/meteo_domain/entities/: coordinate.py  data_file.py  data_file_serializer.py  datafile.py  datafile_serializer.py  measure_query.py  meta_data_file.py  sensor.py  workspace.py
projects/meteo-domain/tests/: test_data_file.py  test_datafile_creation_service.py  test_datafile_serialiser.py  test_datafile_service.py  test_dependency_injector.py  test_locations.py  test_measure_serialiser.py  test_mem_unit_of_work.py  test_memory_mq.py  test_memory_unit_of_work.py  test_metadata_file_service.py  test_period.py  test_times.py  test_unit_of_work.py
(+299 files in other folders)
