[project]
name = "data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.2",
]

[tool.uv.workspace]
members = [
    "projects/*",
    "adapters/*",
    "connectors/*",
]

[tool.uv.sources]

meteo-app = { workspace = true }

# domain
aa-common = { workspace = true }
meteo-domain = { workspace = true }

#ports
data-file-repository = { workspace = true }
workspace-repository = { workspace = true }
file-repository = { workspace = true }
measure-repository = { workspace = true }

# adapters
kafka-message-queue = { workspace = true }
redis-message-queue = { workspace = true }
sql-meteo-adapters = { workspace = true }
s3-file-repository = { workspace = true }
posix-file-repository = { workspace = true }

posix-measure-repository = { workspace = true }
influxdb-measure-repository = { workspace = true }
openmeteo-measure-repository = { workspace = true }

# connectors
sql-connector = { workspace = true }
influxdb-connector = { workspace = true }
s3-connector = { workspace = true }
kafka-connector = { workspace = true }

[tool.ruff]
# Règles à activer
lint.select = ["E", "F", "B", "I", "N", "UP", "PL"]  # PL active les règles équivalentes à Pylint

# Ignore les erreurs d'importation pour les packages spécifiques
lint.extend-ignore = []

# Chemins à ignorer
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "c-extension-no-member",
]

[tool.pylint."DESIGN"]
min-public-methods = 1

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pdoc>=15.0.3",
    "pre-commit>=4.2.0",
    "pycrunch-engine>=1.6.4",
    "pydeps>=3.0.1",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "radon>=6.0.1",
    "ruff>=0.11.8",
]
