[project]
name = "data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easy-kit>=0.1.24",
    "imageio>=2.37.0",
]

[tool.uv.workspace]
members = [
    "projects/*",
    "adapters/*",
    "connectors/*",
]

[tool.uv.sources]
# projects
event-mock = { workspace = true }
meteo-app = { workspace = true }
meteo-backend = { workspace = true }

# domain
meteo-domain = { workspace = true }

# adapters
datafile-api-xarray = { workspace = true }
file-repository-posix = { workspace = true }
file-repository-s3 = { workspace = true }
location-api-geopy = { workspace = true }
measure-repository-influxdb = { workspace = true }
measure-repository-openmeteo = { workspace = true }
measure-repository-posix = { workspace = true }
message-queue-kafka = { workspace = true }
message-queue-redis = { workspace = true }
unit-of-work-sql = { workspace = true }

# connectors
influxdb-connector = { workspace = true }
kafka-connector = { workspace = true }
redis-connector = { workspace = true }
s3-connector = { workspace = true }
sql-connector = { workspace = true }

[tool.ruff]
# Règles à activer
lint.select = ["E", "F", "B", "I", "N", "UP", "PL"]  # PL active les règles équivalentes à Pylint

# Ignore les erreurs d'importation pour les packages spécifiques
lint.extend-ignore = []

# Chemins à ignorer
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "c-extension-no-member",
]

[tool.pylint."DESIGN"]
min-public-methods = 1

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pdoc>=15.0.3",
    "pre-commit>=4.2.0",
    "pydeps>=3.0.1",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "radon>=6.0.1",
    "ruff>=0.11.8",
]
