[project]
name = "data-file-repository-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
