[project]
name = "location-api-geopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
