[project]
name = "measure-repository-openmeteo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "meteo-domain",
    "numpy>=2.2.4",
    "openmeteo-requests>=1.4.0",
    "pandas>=2.2.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
