[project]
name = "measure-repository-openmeteo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "meteo-domain",
    "numpy>=2.2.4",
    "openmeteo-requests>=1.4.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
