[project]
name = "message-queue-kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "meteo-domain",
    "kafka-connector",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
