[project]
name = "posix-measure-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
        "meteo-domain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
