[project]
name = "s3-file-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "meteo-domain",
    "s3-connector"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
