[project]
name = "sql-meteo-adapters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "meteo-domain",
    "sql-connector"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
