[project]
name = "kafka-connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "aiohttp-cors>=0.8.1",
    "aiokafka>=0.12.0",
    "aiosignal>=1.3.2",
    "async-timeout>=5.0.1",
    "kafka-python-ng>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
