[project]
name = "meteo-backend"
version = "1.0.0"
description = "Backend API for meteorological data management"
requires-python = ">=3.9"
dependencies = [
    "aa-common",
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic>=2.0.0",
    "dependency-injector",
    "python-jose[cryptography]",
    "meteo-domain",
    "pydantic-settings>=2.9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=meteo_backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
