[project]
name = "meteo-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "flegac", email = "florent.legac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.46.0",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "tqdm>=4.67.1",
    "cfgrib>=0.9.15.0",
    "h5netcdf>=1.6.1",
    "xarray>=2025.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
